# Todo-CLI

./: README.md  pyproject.toml  requirements.txt  setup.py
TodoApp/: __main__.py  database.py
