[tool.poetry]
name = "Todo-CLI"
version = "0.1.0"
description = ""
authors = ["Advait Jadhav"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
PyInquirer = "^1.0.3"
rich = "^10.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
